--- a/css/main.css
+++ b/css/main.css
@@ -446,12 +446,6 @@ img {
           transform: scaleX(1);
 }
 
-.site-nav__link:hover::after, .site-nav__link:focus::after {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-  outline: none;
-}
-
 .site-nav__item {
   position: relative;
 }
@@ -1555,6 +1549,13 @@ img {
   width: 200px;
   padding: 10px 28px 10px 29px;
   border: 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer-form__button {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .footer-form__icon {
