--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -82,7 +82,7 @@ img {
 }
 
 /* Button */
-.button, .fields__button {
+.button {
   min-width: 200px;
   border-radius: 4px;
   font-weight: 700;
@@ -109,7 +109,7 @@ img {
   border: 0;*/
 }
 
-.button:hover, .fields__button:hover, .button:focus, .fields__button:focus {
+.button:hover, .button:focus {
   background-color: #188ce8;
   cursor: pointer;
 }
@@ -446,12 +446,6 @@ img {
           transform: scaleX(1);
 }
 
-.site-nav__link:hover::after, .site-nav__link:focus::after {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-  outline: none;
-}
-
 .site-nav__item {
   position: relative;
 }
@@ -552,32 +546,36 @@ img {
 }
 
 @media screen and (max-width: 767px) {
-  .fields__item:not(:last-child):not(:nth-last-child(-n+2)) {
+  .fields__item:not(:last-child):not(:nth-last-child(-n + 2)) {
     margin-bottom: 15px;
   }
 }
 
 .fields__button {
-  color: #212121;
-  background-color: #f5f4fa;
   padding: 6px 22px;
+  min-width: 73px;
   border-radius: 4px;
   border: transparent;
+  text-align: center;
+  background-color: #f5f4fa;
+  color: #212121;
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  letter-spacing: 0.03em;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .fields__button:hover, .fields__button:focus {
-  color: #ffffff;
   background-color: #2196f3;
+  color: #ffffff;
+  cursor: pointer;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  outline: none;
 }
 
 .project-list {
@@ -967,6 +965,13 @@ img {
   width: 200px;
   padding: 10px 28px 10px 29px;
   border: 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer-form__button {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .footer-form__icon {
