--- a/sass2/components/footer/_footer-form.scss
+++ b/sass2/components/footer/_footer-form.scss
@@ -83,6 +83,11 @@
   width: 200px;
   padding: 10px 28px 10px 29px;
   border: 0;
+
+  @media screen and (max-width: 1200px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .footer-form__icon {
