--- a/sass2/components/portfolio/_portfolio-fields.scss
+++ b/sass2/components/portfolio/_portfolio-fields.scss
@@ -1,53 +1,52 @@
-
 .portfolio-title {
-    margin: 0;
-    display: none;
-  }
-  
-  .fields {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 50px;
+  margin: 0;
+  display: none;
+}
 
-    @media screen and (min-width:768px){
+.fields {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+
+  @media screen and (min-width: 768px) {
     justify-content: center;
+  }
+}
+
+.fields__item:not(:last-child) {
+  margin-right: 8px;
+
+  @media screen and (max-width: 767px) {
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 15px;
     }
   }
-  
-  .fields__item:not(:last-child) {
-    margin-right: 8px;
+}
 
-      @media screen and (max-width:767px){
-      &:not(:nth-last-child(-n+2)){
-        margin-bottom: 15px; 
-      }
-  }
-  }
+.fields__button {
+  padding: 6px 22px;
+  min-width: 73px;
+  border-radius: 4px;
+  border: transparent;
+  text-align: center;
+  background-color: $secondaryBcgColor;
+  color: $titleTextColor;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .fields__button {
-      @extend %button;
-    color: $titleTextColor;
-    background-color: $secondaryBcgColor;
-   
-    padding: 6px 22px;
-  
-    border-radius: 4px;
-    border: transparent;
-  
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    transition: color $animationDuration $animationTimingFunction,
-      background-color $animationDuration $animationTimingFunction,
-      box-shadow $animationDuration $animationTimingFunction;
-  
   &:hover,
   &:focus {
-    color: $primaryBcgColor;
     background-color: $accentColor;
+    color: $primaryBcgColor;
+    cursor: pointer;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
-    outline: none;
   }
 }
