--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -677,11 +677,12 @@ img {
   display: inline-block;
   content: '';
   position: absolute;
+  overflow: auto;
   height: 294px;
+  padding: 63px 24px;
   top: 0;
   left: 0;
   margin: 0;
-  padding: 63px 24px;
   color: #ffffff;
   font-size: 18px;
   line-height: 1.56;
@@ -692,6 +693,13 @@ img {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .project-overlay__text {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .project-list__item:hover .project-overlay__text,
