--- a/sass2/components/portfolio/_overlay.scss
+++ b/sass2/components/portfolio/_overlay.scss
@@ -1,34 +1,37 @@
 .project-overlay {
-    position: relative;
-    // width: 370px;
-    overflow: hidden;
-  
+  position: relative;
+  // width: 370px;
+  overflow: hidden;
+
   &__text {
     display: inline-block;
     content: '';
     position: absolute;
+    overflow: auto;
     // width: 370px;
     height: 294px;
-  
+    padding: 63px 24px;
     top: 0;
     left: 0;
     margin: 0;
-    padding: 63px 24px;
-  
+    @media screen and (min-width: 480px) {
+      width: 100%;
+      height: 100%;
+    }
+
     color: $primaryBcgColor;
     font-size: 18px;
     line-height: 1.56;
-  
+
     background-color: rgba(33, 150, 243, 0.9);
-  
+
     transform: translateY(150%);
     transition: transform $animationDuration $animationTimingFunction;
   }
 }
 
-  .project-list__item:hover .project-overlay__text,
-  .project-list__item:focus .project-overlay__text {
-    transform: translateY(0%);
-    outline: none;
-  }
-  
+.project-list__item:hover .project-overlay__text,
+.project-list__item:focus .project-overlay__text {
+  transform: translateY(0%);
+  outline: none;
+}
