--- a/sass2/components/portfolio/_overlay.scss
+++ b/sass2/components/portfolio/_overlay.scss
@@ -1,6 +1,5 @@
 .project-overlay {
   position: relative;
-  // width: 370px;
   overflow: hidden;
 
   &__text {
@@ -8,15 +7,17 @@
     content: '';
     position: absolute;
     overflow: auto;
-    // width: 370px;
+    overflow: hidden;
+    
     height: 294px;
-    padding: 63px 24px;
+    padding: 77px 24px;
     top: 0;
     left: 0;
     margin: 0;
     @media screen and (min-width: 480px) {
       width: 100%;
       height: 100%;
+      padding: 49px 24px;
     }
 
     color: $primaryBcgColor;
