--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -668,45 +668,8 @@ img {
   line-height: 1.88;
 }
 
-.project-overlay {
-  position: relative;
-  overflow: hidden;
-}
-
-.project-overlay__text {
-  display: inline-block;
-  content: '';
-  position: absolute;
-  overflow: auto;
-  height: 294px;
-  padding: 63px 24px;
-  top: 0;
-  left: 0;
-  margin: 0;
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 1.56;
-  background-color: rgba(33, 150, 243, 0.9);
-  -webkit-transform: translateY(150%);
-          transform: translateY(150%);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 480px) {
-  .project-overlay__text {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.project-list__item:hover .project-overlay__text,
-.project-list__item:focus .project-overlay__text {
-  -webkit-transform: translateY(0%);
-          transform: translateY(0%);
-  outline: none;
+img {
+  display: block;
 }
 
 .footer {
