--- a/sass2/components/portfolio/_overlay.scss
+++ b/sass2/components/portfolio/_overlay.scss
@@ -1,38 +1,3 @@
-.project-overlay {
-  position: relative;
-  overflow: hidden;
-
-  &__text {
-    display: inline-block;
-    content: '';
-    position: absolute;
-    overflow: auto;
-    overflow: hidden;
-    
-    height: 294px;
-    padding: 77px 24px;
-    top: 0;
-    left: 0;
-    margin: 0;
-    @media screen and (min-width: 480px) {
-      width: 100%;
-      height: 100%;
-      padding: 49px 24px;
-    }
-
-    color: $primaryBcgColor;
-    font-size: 18px;
-    line-height: 1.56;
-
-    background-color: rgba(33, 150, 243, 0.9);
-
-    transform: translateY(150%);
-    transition: transform $animationDuration $animationTimingFunction;
-  }
-}
-
-.project-list__item:hover .project-overlay__text,
-.project-list__item:focus .project-overlay__text {
-  transform: translateY(0%);
-  outline: none;
+img {
+  display: block;
 }
